--- a/MM856 - Grafteori/main.tex
+++ b/MM856 - Grafteori/main.tex
@@ -5,10 +5,16 @@
 \tableofcontents
 \newpage
 
+\include{Introduktion}
+
 %% West
 \include{Grundlæggende}
 
 %% Bang-Gutin
+%%
+
+\newpage
+\printindex
 
 \newpage
 
