--- a/preamble.tex
+++ b/preamble.tex
@@ -30,6 +30,7 @@
 \usepackage{wrapfig} % Alignment til figurer
 
 
+\usepackage{imakeidx}
 
 % Sæt sproget til dansk
 \usepackage{polyglossia}
@@ -307,9 +308,12 @@
 
 \declaretheorem[style=proofstyle, name=Bevis, numbered=no]{proof}
 
+\makeindex
+
 %====================%
 %  End of preamble.  %
 %====================%
+
 
 
 \begin{document}
