--- a/preamble.tex
+++ b/preamble.tex
@@ -55,7 +55,8 @@
 
 \usepackage{tikz} % Til grafer
 \usetikzlibrary{automata} % Til automatgrafer
-\usetikzlibrary{graphs}
+\usetikzlibrary{graphs, graphdrawing}
+\usegdlibrary{force} % noget til grafer? chatgpt sagde jeg skulle tilføje det
 \usetikzlibrary{shapes} % Ellipse
 \usetikzlibrary{trees} % Til træstrukturer
 \usetikzlibrary{positioning} % Positionering af knuder
